Downgrade backend to Java 8 and Spring Boot 2.7